--- a/node/package.json
+++ b/node/package.json
@@ -4,7 +4,8 @@
   "description": "Projeto de backend para criar, armazenar, ler e fazer alteraçoes de usuarios.",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --transpile-only src/server.ts"
+    "start": "ts-node-dev --transpile-only src/server.ts",
+    "typeorm": "ts-node-dev node_modules/.bin/typeorm"
   },
   "keywords": [
     "backend",
