--- a/node/package.json
+++ b/node/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Projeto de backend para criar, armazenar, ler e fazer alteraçoes de usuarios.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "ts-node-dev --transpile-only src/server.ts",
     "typeorm": "ts-node-dev node_modules/.bin/typeorm"
@@ -16,16 +17,22 @@
   "author": "Gleydson",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.14",
     "@types/typescript": "^2.0.0",
+    "@types/uuid": "^8.3.4",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "uuid": "^8.3.2"
   }
 }
