--- a/node/package.json
+++ b/node/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.14",
     "@types/typescript": "^2.0.0",
     "@types/uuid": "^8.3.4",
@@ -30,6 +31,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41",
