--- a/node/package.json
+++ b/node/package.json
@@ -28,7 +28,9 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
